<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_gray" >
    <TextView
        android:id="@+id/bookmark_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:background="@color/dark_gray"
        android:text="@string/epub_viewer_bookmark_head_text" />
    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white" />
    <TextView
        android:id="@+id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:text="@string/epub_viewer_bookmark_null_text" />
    <Button
        android:id="@+id/bookmark_add_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/epub_viewer_bookmark_add_text" />

</LinearLayout>
